add DataSourceConfig for dynamic database URL handling and update application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=arquetipos
-server.port=8081
+server.port=${PORT:8081}
 
 # Ativa o endpoint de health do Actuator
 management.endpoints.web.exposure.include=health
@@ -17,8 +17,9 @@ hotmart.basic-auth=Basic ZDkwZWI3NDUtODc0Ny00YTAzLThiMTAtMzljYzk2MGMwN2RjOjQ3MzU
 
 # Configurações do banco de dados PostgreSQL
 # Usa variáveis de ambiente providas pelo ambiente de deploy (ex.: RAILWAY)
-# Se DATABASE_URL vier no formato postgresql://user:pass@host:port/db, convertemos para jdbc com prefixo jdbc:postgresql://
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/arquetipos_db}
+# JDBC_DATABASE_URL: usado por alguns provedores se já fornecerem a URL no formato jdbc:postgresql://
+spring.datasource.url=${JDBC_DATABASE_URL:}
+# Também aceitamos DATABASE_URL (heroku/railway) no formato postgres://user:pass@host:port/db ? DataSourceConfig converte automaticamente
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:postgres}
 
