--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ hotmart.basic-auth=Basic ZDkwZWI3NDUtODc0Ny00YTAzLThiMTAtMzljYzk2MGMwN2RjOjQ3MzU
 # Configurações do banco de dados PostgreSQL
 # Usa variáveis de ambiente providas pelo ambiente de deploy (ex.: RAILWAY)
 # JDBC_DATABASE_URL: usado por alguns provedores se já fornecerem a URL no formato jdbc:postgresql://
-spring.datasource.url=${JDBC_DATABASE_URL:}
+# (não definimos spring.datasource.url aqui para não confundir autoconfiguração do Spring Boot)
 # Também aceitamos DATABASE_URL (heroku/railway) no formato postgres://user:pass@host:port/db ? DataSourceConfig converte automaticamente
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:postgres}
