flyway version changes

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,16 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>10.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>10.5.0</version>
+        </dependency>
         <!-- H2 para testes locais/CI -->
         <dependency>
             <groupId>com.h2database</groupId>
